# fix-broken-project

./: .gitignore  Cargo.toml  README.md
.github/: Dockerfile.profiling
.github/workflows/: rust.yml
broken-app/: .dockerignore  Cargo.toml  Dockerfile  README.md
broken-app/artifacts/: baseline_before.txt  baseline_optimized.txt  baseline_slow.txt  criterion_before.txt  massif_before.out  massif_optimized.out  massif_optimized.txt  massif_slow.out  massif_slow.txt
broken-app/benches/: baseline.rs  criterion.rs
broken-app/scripts/: compare.ps1  compare.sh  profile.ps1  profile.sh
broken-app/src/: algo.rs  concurrency.rs  lib.rs
broken-app/tests/: integration.rs
reference-app/: Cargo.toml
