[package]
name = "broken-app"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[test]]
name = "integration"
path = "tests/integration.rs"

[[bench]]
name = "baseline"
harness = false

[[bench]]
name = "criterion"
harness = false

[profile.release]
debug = true
